--- a/login.html
+++ b/login.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>login mas login</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    
+    <div class="contenedor-principal">
+<img class="avatar" src="../login/imagenes/marvin.png" alt="">
+<h1>Registrate</h1>
+<form> 
+<label for="usuario"></label>
+<input type="text" placeholder="Usuario">
+<label for="password"></label>
+<input type="password" placeholder="Password">
+<button class="B-enviar">enviar</button>
+<a href="#">Olvide mi contraseña</a>
+
+
+</form>
+
+
+
+    </div>
 </body>
 </html>
